    :mod:`json`.

    Using the latest version of simplejson is recommended:

    .. code-block:: console

        $ pip install -U simplejson

- Removed transports that are no longer supported in this version:

    - Django ORM transport
    - SQLAlchemy ORM transport
    - Beanstalk transport
    - ZeroMQ transport
    - amqplib transport (use pyamqp).

- New SQS transport

    Donated by NextDoor, with additional contributions from mdk.

    .. note::

        ``kombu[sqs]`` now depends on :pypi:`pycurl`.

- New Consul transport.

    Contributed by **Wido den Hollander**.

- New etcd transport.

    Contributed by **Stephen Milner**.

- New Qpid transport.

    It was introduced as an experimental transport in Kombu 3.0, but is now
    mature enough to be fully supported.

    Created and maintained by **Brian Bouterse**.

- Redis: Priority 0 is now lowest, 9 is highest.
  (**backward incompatible**)

    This to match how priorities in AMQP works.

    Fix contributed by **Alex Koshelev**.

- Redis: Support for Sentinel

    You can point the connection to a list of sentinel URLs like:

    .. code-block:: text

        sentinel://0.0.0.0:26379;sentinel://0.0.0.0:26380/...

    where each sentinel is separated by a `;`. Multiple sentinels are handled
    by :class:`kombu.Connection` constructor, and placed in the alternative
    list of servers to connect to in case of connection failure.

   Contributed by **Sergey Azovskov**, and **Lorenzo Mancini**

- RabbitMQ Queue Extensions

    New arguments have been added to :class:`kombu.Queue` that lets
    you directly and conveniently configure the RabbitMQ queue extensions.

    - ``Queue(expires=20.0)``

        Set queue expiry time in float seconds.

        See :attr:`kombu.Queue.expires`.

    - ``Queue(message_ttl=30.0)``

        Set queue message time-to-live float seconds.

        See :attr:`kombu.Queue.message_ttl`.

    - ``Queue(max_length=1000)``
