@@ -11,10 +11,10 @@ from kombu.message import Message
 class test_Message:
 
     def test_repr(self):
-        assert repr(Message(Mock(), 'b'))
+        assert repr(Message('b', channel=Mock()))
 
     def test_decode(self):
-        m = Message(Mock(), 'body')
+        m = Message('body', channel=Mock())
         decode = m._decode = Mock()
         assert m._decoded_cache is None
         assert m.decode() is m._decode.return_value
@@ -24,7 +24,7 @@ class test_Message:
         assert m.decode() is decode.return_value
 
     def test_reraise_error(self):
-        m = Message(Mock(), 'body')
+        m = Message('body', channel=Mock())
         callback = Mock(name='callback')
         try:
             raise KeyError('foo')
@@ -39,6 +39,6 @@ class test_Message:
     @patch('kombu.message.decompress')
     def test_decompression_stores_error(self, decompress):
         decompress.side_effect = RuntimeError()
-        m = Message(Mock(), 'body', headers={'compression': 'zlib'})
+        m = Message('body', channel=Mock(), headers={'compression': 'zlib'})
         with pytest.raises(RuntimeError):
             m._reraise_error(None)
